Add info for pragma-git gui client

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -441,3 +441,15 @@ guis:
   license: Proprietary
   trend_name: git glint
   order: 52
+- name: Pragma-git
+  url: https://pragma-git.github.io
+  image_tag: guis/pragmagit@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+  price: Free
+  license: MIT
+  trend_name: git pragma-git 
+  order: 53
+  
