--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -439,3 +439,13 @@ guis:
   license: Proprietary
   trend_name: git glint
   order: 52
+- name: GitBreeze
+  url: https://gitbreeze.dev/
+  image_tag: guis/gitbreeze@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: Proprietary
+  order: 53
