Fix errors in yaml file

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -450,6 +450,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
+  order: 53
 - name: Pragma-git
   url: https://pragma-git.github.io
   image_tag: guis/pragmagit@2x.png
@@ -459,6 +460,6 @@ guis:
     - Linux
   price: Free
   license: MIT
-  trend_name: git pragma
-  order: 53
+  trend_name: pragma github
+  order: 54
   
