--- a/.github/workflows/update-book.yml
+++ b/.github/workflows/update-book.yml
@@ -2,6 +2,11 @@ name: Update Progit Book
 
 on:
   workflow_dispatch:
+    inputs:
+      force-rebuild:
+        description: Force re-building all books (e.g. after a script change)
+        type: boolean
+        default: false
   schedule:
     # check daily for updates
     - cron: '29 4 * * *'
@@ -21,7 +26,7 @@ jobs:
           script: |
             const { getPendingBookUpdates } = require('./script/ci-helper.js')
 
-            const pending = await getPendingBookUpdates(github)
+            const pending = await getPendingBookUpdates(github, ${{ inputs.force-rebuild == true }})
             // an empty matrix is invalid and makes the workflow run fail, unfortunately
             return pending.length ? pending : ['']
       - name: ruby setup
