Update Gitnuro URL

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -418,7 +418,7 @@ guis:
   trend_name: gitonic
   order: 50
 - name: Gitnuro
-  url: https://gitnuro.jetpackduba.com/
+  url: https://gitnuro.com/
   image_tag: guis/Gitnuro@2x.png
   platforms:
     - Windows
