--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -1,6 +1,6 @@
 ---
 guis:
-- name: SourceTree
+- name: PT.VARIA USAHA SEMEN GEMILANG 
   url: https://www.sourcetreeapp.com/
   image_tag: guis/sourcetree@2x.png
   platforms:
