--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -307,7 +307,7 @@ guis:
   license: Proprietary
   order: 42
 - name: GitUI
-  url: https://extrawurst.itch.io/gitui
+  url: http://gitui.org
   image_tag: guis/gitui@2x.png
   platforms:
   - Windows
