GUI updates for Gitkraken

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -35,15 +35,15 @@ guis:
   price: Free
   license: GNU GPL
   order: 4
-- name: GitKraken
+- name: GitKraken Desktop
   url: https://www.gitkraken.com/
-  image_tag: guis/git-kraken@2x.png
+  image_tag: guis/gitkraken-2024@2x.png
   platforms:
   - Windows
   - Mac
   - Linux
   # Free tier only works with local and public repositories
-  price: Free / $59+/user annually
+  price: Free / $48+/user annually
   license: Proprietary
   order: 5
 - name: Magit
@@ -460,4 +460,14 @@ guis:
   license: MIT
   trend_name: pragma github
   order: 54
-  
+- name: GitKraken CLI
+  url: https://github.com/gitkraken/gk-cli
+  image_tag: guis/gk-cli-keifs@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free / $48.00+/user annually
+  license: Proprietary
+  order: 55
+
