--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -36,7 +36,7 @@ guis:
   license: GNU GPL
   order: 4
 - name: GitKraken Desktop
-  url: https://www.gitkraken.com/
+  url: https://www.gitkraken.com/git-client
   image_tag: guis/gitkraken-2024@2x.png
   platforms:
   - Windows
@@ -461,7 +461,7 @@ guis:
   trend_name: pragma github
   order: 54
 - name: GitKraken CLI
-  url: https://github.com/gitkraken/gk-cli
+  url: https://www.gitkraken.com/cli
   image_tag: guis/gk-cli-keifs@2x.png
   platforms:
   - Windows
