--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -470,3 +470,14 @@ guis:
   price: Free / $48.00+/user annually
   license: Proprietary
   order: 55
+- name: SourceGit
+  url: https://sourcegit-scm.github.io
+  image_tag: guis/sourcegit@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+  price: Free
+  license: MIT
+  trend_name: SourceGit
+  order: 56
