add RelaGit to GUI list

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -481,3 +481,13 @@ guis:
   license: MIT
   trend_name: SourceGit
   order: 56
+- name: RelaGit
+  url: https:/rela.dev
+  image_tag: guis/relagit@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+  price: Free
+  license: LGPL-3.0-or-later
+  order: 57
