(resources/guis): fix relagit url

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -482,7 +482,7 @@ guis:
   trend_name: SourceGit
   order: 56
 - name: RelaGit
-  url: https:/rela.dev
+  url: https://rela.dev
   image_tag: guis/relagit@2x.png
   platforms:
     - Windows
