Added VS Code GUI (it has a source control feature)

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -1,15 +1,5 @@
 ---
 guis:
-- name: SourceTree
-  url: https://www.sourcetreeapp.com/
-  image_tag: guis/sourcetree@2x.png
-  platforms:
-  - Mac
-  - Windows
-  price: Free
-  license: Proprietary
-  trend_name: Git SourceTree
-  order: 2
 - name: GitHub Desktop
   url: https://desktop.github.com/
   image_tag: guis/github-desktop@2x.png
@@ -19,6 +9,26 @@ guis:
   price: Free
   license: MIT
   order: 1
+- name: VS Code
+  url: https://code.visualstudio.com
+  image_tag: guis/vscode@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+    price: Free
+    license: MIT
+    order: 2
+- name: SourceTree
+  url: https://www.sourcetreeapp.com/
+  image_tag: guis/sourcetree@2x.png
+  platforms:
+  - Mac
+  - Windows
+  price: Free
+  license: Proprietary
+  trend_name: Git SourceTree
+  order: 3
 - name: TortoiseGit
   url: https://tortoisegit.org/
   image_tag: guis/tortoisegit@2x.png
@@ -26,7 +36,7 @@ guis:
   - Windows
   price: Free
   license: GNU GPL
-  order: 3
+  order: 4
 - name: Git Extensions
   url: https://gitextensions.github.io/
   image_tag: guis/git-extensions@2x.png
@@ -34,7 +44,7 @@ guis:
   - Windows
   price: Free
   license: GNU GPL
-  order: 4
+  order: 5
 - name: GitKraken Desktop
   url: https://www.gitkraken.com/git-client
   image_tag: guis/gitkraken-2024@2x.png
@@ -45,7 +55,7 @@ guis:
   # Free tier only works with local and public repositories
   price: Free / $48+/user annually
   license: Proprietary
-  order: 5
+  order: 6
 - name: Magit
   url: https://magit.vc
   image_tag: guis/magit@2x.png
@@ -55,7 +65,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 6
+  order: 7
 - name: SmartGit
   url: https://www.syntevo.com/smartgit/
   image_tag: guis/smartgit@2x.png
@@ -65,7 +75,7 @@ guis:
   - Linux
   price: "Free for non-commercial use / $59/user annually"
   license: Proprietary
-  order: 7
+  order: 8
 - name: Tower
   url: https://www.git-tower.com/
   image_tag: guis/tower@2x.png
@@ -76,7 +86,7 @@ guis:
   price: "$69+/user annually (Free 30-day trial)"
   license: Proprietary
   trend_name: git tower
-  order: 8
+  order: 9
 - name: GitUp
   url: http://gitup.co/
   image_tag: guis/gitup@2x.png
@@ -84,7 +94,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 11
+  order: 12
 - name: gitg
   url: https://wiki.gnome.org/Apps/Gitg/
   image_tag: guis/gitg@2x.png
@@ -93,7 +103,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 14
+  order: 15
 - name: ungit
   url: https://github.com/FredrikNoren/ungit
   image_tag: guis/ungit@2x.png
@@ -103,7 +113,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 15
+  order: 16
 - name: git-cola
   url: https://git-cola.github.io/
   image_tag: guis/git-cola@2x.png
@@ -113,7 +123,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 25
+  order: 26
 - name: giggle
   url: https://wiki.gnome.org/Apps/giggle/
   image_tag: guis/giggle@2x.png
@@ -122,7 +132,7 @@ guis:
   price: Free
   license: GNU GPL
   trend_name: Git giggle
-  order: 27
+  order: 28
 - name: Aurees
   url: https://aurees.com/
   image_tag: guis/aurees@2x.png
@@ -132,7 +142,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 28
+  order: 29
 - name: Fork
   url: https://git-fork.com/
   image_tag: guis/fork@2x.png
@@ -143,7 +153,7 @@ guis:
   price: $49.99 (Free evaluation)
   license: Proprietary
   trend_name: Fork Git client
-  order: 12
+  order: 13
 - name: Working Copy
   url: https://workingcopyapp.com/
   image_tag: guis/workingcopy@2x.png
@@ -154,7 +164,7 @@ guis:
   price: Free / $19.99
   license: Proprietary
   trend_name: Working Copy iOS
-  order: 23
+  order: 24
 - name: GitAhead (no longer under active development)
   url: https://gitahead.github.io/gitahead.com/
   image_tag: guis/gitahead@2x.png
@@ -164,7 +174,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 17
+  order: 18
 - name: Gittyup
   url: https://murmele.github.io/Gittyup/
   image_tag: guis/gittyup@2x.png
@@ -174,7 +184,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 46
+  order: 47
 - name: Pocket Git
   url: http://pocketgit.com/
   image_tag: guis/pocketgit@2x.png
@@ -182,7 +192,7 @@ guis:
     - Android
   price: €2.49/$1.99
   license: Proprietary
-  order: 21
+  order: 22
 - name: GitDrive
   url: http://gitdrive.com/
   image_tag: guis/gitdrive@2x.png
@@ -191,7 +201,7 @@ guis:
   # No details what the $6.99 in-app purchase does, all it says is "Unlimited Version"
   price: Free / $6.99
   license: Proprietary
-  order: 37
+  order: 38
 - name: Guitar
   url: https://github.com/soramimi/Guitar
   image_tag: guis/guitar@2x.png
@@ -202,7 +212,7 @@ guis:
   price: Free
   license: GNU GPL
   trend_name: Git guitar
-  order: 20
+  order: 21
 - name: RepoZ
   url: https://github.com/awaescher/RepoZ/
   image_tag: guis/repoz@2x.png
@@ -211,7 +221,7 @@ guis:
   - Mac
   price: Free
   license: MIT
-  order: 35
+  order: 36
 - name: Cong
   url: http://cong.tools/
   image_tag: guis/cong@2x.png
@@ -220,7 +230,7 @@ guis:
   price: Free
   license: Proprietary
   trend_name: Git Cong
-  order: 36
+  order: 37
 - name: Sublime Merge
   url: https://www.sublimemerge.com
   image_tag: guis/smerge@2x.png
@@ -232,7 +242,7 @@ guis:
   # License is only valid for 3 years of updates
   price: "$99/user / $75/user annually (Free evaluation)"
   license: Proprietary
-  order: 10
+  order: 11
 - name: LazyGit
   url: https://github.com/jesseduffield/lazygit
   image_tag: guis/lazygit@2x.png
@@ -242,7 +252,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 18
+  order: 19
 - name: SnailGit
   url: https://langui.net/snailgit/
   image_tag: guis/snailgit@2x.png
@@ -251,7 +261,7 @@ guis:
   # Lite version is limited to just one repository
   price: "Free (limited) / $9.99"
   license: Proprietary
-  order: 32
+  order: 33
 - name: GitAtomic
   url: https://gitatomic.bitbucket.io/
   image_tag: guis/gitatomic@2x.png
@@ -259,7 +269,7 @@ guis:
   - Windows
   price: $17.99+/user annually (Free 30-day trial)
   license: Proprietary
-  order: 39
+  order: 40
 - name: Gitfox
   url: https://www.gitfox.app
   image_tag: guis/gitfox@2x.png
@@ -268,7 +278,7 @@ guis:
   price: "€39,99/user annually / €79,99 (Free 30-day trial)"
   license: Proprietary
   trend_name: Gitfox Git Client
-  order: 24
+  order: 25
 - name: GitFiend
   url: https://gitfiend.com
   image_tag: guis/gitfiend@2x.png
@@ -278,7 +288,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 38
+  order: 39
 - name: NitroGit
   url: http://nitrogit.net
   image_tag: guis/nitrogit@2x.png
@@ -286,7 +296,7 @@ guis:
   - Windows
   price: "Free for non-commercial use / 20€/user"
   license: Proprietary
-  order: 40
+  order: 41
 - name: GitFinder
   url: https://gitfinder.com
   image_tag: guis/gitfinder@2x.png
@@ -295,7 +305,7 @@ guis:
   # After the trial ends, GitFinder will only work with one git repository
   price: "Free (limited) / $29.95 (Free 30-day trial)"
   license: Proprietary
-  order: 41
+  order: 42
 - name: Vershd
   url: https://vershd.io/
   image_tag: guis/vershd@2x.png
@@ -305,7 +315,7 @@ guis:
   - Linux
   price: Free for non-commercial use / $37/user annually
   license: Proprietary
-  order: 42
+  order: 43
 - name: GitUI
   url: http://gitui.org
   image_tag: guis/gitui@2x.png
@@ -315,7 +325,7 @@ guis:
   - Linux
   price: Free, but donations welcome
   license: MIT
-  order: 26
+  order: 27
 - name: PolyGit
   url: http://www.polygitapp.com
   image_tag: guis/polygit@2x.png
@@ -325,7 +335,7 @@ guis:
   # Price on the website ($15) doesn't match prices in the app store (below)
   price: Free (limited) / $11.99/year / $39.99
   license: Proprietary
-  order: 44
+  order: 45
 - name: GitVine
   url: https://insanesharpness.gitlab.io/GitVine
   image_tag: guis/gitvine@2x.png
@@ -335,7 +345,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 43
+  order: 44
 - name: Fugitive
   url: https://github.com/tpope/vim-fugitive
   image_tag: guis/fugitive@2x.png
@@ -346,7 +356,7 @@ guis:
   price: Free
   license: Vim
   trend_name: Vim fugitive
-  order: 16
+  order: 17
 - name: MeGit (based on EGit)
   url: https://github.com/eclipsesource/megit
   image_tag: guis/megit@2x.png
@@ -357,7 +367,7 @@ guis:
   price: Free
   license: EPL2.0
   trend_name: egit
-  order: 9
+  order: 10
 - name: Gitgui
   url: https://github.com/jjustra/gitgui
   image_tag: guis/gitgui@2x.png
@@ -367,7 +377,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 45
+  order: 46
 - name: Git Klient
   url: https://invent.kde.org/sdk/gitklient
   image_tag: guis/gitklient@2x.png
@@ -375,7 +385,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 47
+  order: 48
   trend_name: kde git klient
 - name: GitViewer
   url: https://gitviewer.com
@@ -386,7 +396,7 @@ guis:
   # No details on the limitations with the free version
   price: Free / $6.99 (Free 7-day trial)
   license: Proprietary
-  order: 48
+  order: 49
 - name: Anchorpoint
   url: https://anchorpoint.app
   image_tag: guis/anchorpoint@2x.png
@@ -396,7 +406,7 @@ guis:
   price: Free / 20€
   license: Proprietary
   trend_name: anchorpoint
-  order: 22
+  order: 23
 - name: CommandGit
   url: https://CommandGit.com
   image_tag: guis/CommandGit@2x.png
@@ -405,7 +415,7 @@ guis:
   price: $5.99/MO (Free 14-day trial)
   license: Proprietary
   trend_name: CommandGit
-  order: 49
+  order: 50
 - name: gitonic
   url: https://github.com/kr-g/gitonic
   image_tag: guis/gitonic@2x.png
@@ -416,7 +426,7 @@ guis:
   price: Free
   license: AGPL-3.0-or-later
   trend_name: gitonic
-  order: 50
+  order: 51
 - name: Gitnuro
   url: https://gitnuro.com/
   image_tag: guis/Gitnuro@2x.png
@@ -426,7 +436,7 @@ guis:
     - Linux
   price: Free
   license: GNU GPL
-  order: 51
+  order: 52
 - name: Glint
   url: https://glint.info
   image_tag: guis/git-glint@2x.png
@@ -438,7 +448,7 @@ guis:
   price: Free / $35/user annually
   license: Proprietary
   trend_name: git glint
-  order: 13
+  order: 14
 - name: GitBreeze
   url: https://gitbreeze.dev/
   image_tag: guis/gitbreeze@2x.png
@@ -448,7 +458,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 53
+  order: 54
 - name: Pragma-git
   url: https://pragma-git.github.io
   image_tag: guis/pragmagit@2x.png
@@ -459,7 +469,7 @@ guis:
   price: Free
   license: MIT
   trend_name: pragma github
-  order: 54
+  order: 55
 - name: GitKraken CLI
   url: https://www.gitkraken.com/cli
   image_tag: guis/gk-cli-keifs@2x.png
@@ -469,7 +479,7 @@ guis:
   - Linux
   price: Free / $48.00+/user annually
   license: Proprietary
-  order: 55
+  order: 56
 - name: SourceGit
   url: https://sourcegit-scm.github.io
   image_tag: guis/sourcegit@2x.png
@@ -480,7 +490,7 @@ guis:
   price: Free
   license: MIT
   trend_name: SourceGit
-  order: 56
+  order: 57
 - name: RelaGit
   url: https://rela.dev
   image_tag: guis/relagit@2x.png
@@ -490,4 +500,4 @@ guis:
     - Linux
   price: Free
   license: LGPL-3.0-or-later
-  order: 57
+  order: 58
