mark Aurees as  "no longer under active development"

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -123,7 +123,7 @@ guis:
   license: GNU GPL
   trend_name: Git giggle
   order: 27
-- name: Aurees
+- name: Aurees (no longer under active development)
   url: https://aurees.com/
   image_tag: guis/aurees@2x.png
   platforms:
