--- a/.github/workflows/update-download-data.yml
+++ b/.github/workflows/update-download-data.yml
@@ -13,6 +13,7 @@ jobs:
       contents: write # to push changes (if any)
       pages: write # to deploy to GitHub Pages
       id-token: write # to verify that the deployment source is legit
+      issues: write # to open tickets upon broken links
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.url }}
