--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,17 @@ jobs:
       with:
         name: pages
         path: pages.tar.gz
+
+    - name: verify search results
+      run: |
+        set -x
+        res=0
+        for term in commit config log rev-parse
+        do
+          node ./script/run-pagefind.js "$term" | tee search.results >&2
+          grep "^1. /docs/git-$term\\.html" search.results || {
+            echo "::error::Search for $term failed to show the manual page first" >&2
+            res=1
+          }
+        done
+        exit $res
