add android git gui puppygit

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -491,3 +491,11 @@ guis:
   price: Free
   license: LGPL-3.0-or-later
   order: 57
+- name: Puppy Git Pro
+  url: https://github.com/Bandeapart1964/PuppyGitPro
+  image_tag: guis/puppygit@2x.png
+  platforms:
+    - Android
+  price: Free
+  license: GPLv3
+  order: 58
