deploy(playwright): test the deployed pages, not Cloudflare's caches
The `git-scm.com` domain is handled by Cloudflare, which caches the
pages. Those cached pages are not what we want to test with Playwright,
so let's override via `/etc/hosts` which IP the domain name
`git-scm.com` resolves to; It is currently hardcoded to the first IPv4
address listed in
https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site/managing-a-custom-domain-for-your-github-pages-site#configuring-an-apex-domain

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -148,6 +148,10 @@ runs:
     - name: Install @playwright/test
       shell: bash
       run: npm install @playwright/test
+    - name: Edit /etc/hosts to map git-scm.com to GitHub
+      shell: bash
+      # This side-steps the Cloudflare caches
+      run: sudo sh -c 'echo "185.199.108.153 git-scm.com" >>/etc/hosts'
     - name: Run Playwright tests
       shell: bash
       env:
