playwright: stop expecting git-scm.com to be the Rails app
Now that we are really close to switching over https://git-scm.com/ from
the Rails app to the Hugo/Pagefind-generated static site, it is time to
stop assuming that it is the former.

Indeed, I have just changed the `deploy` workflow to ensure that the
site works as expected when being deployed as `http://git-scm.com/`.

So let's just change the `playwright` workflow to have another input
that specifies whether the person triggering that workflow expects the
URL to resolve to a Rails app variant of the site or not, and stop
trying to determine that automatically.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,10 @@ on:
         description: 'URL to test'
         required: true
         default: 'https://git-scm.com'
+      assume-rails-app:
+        description: 'Whether the URL points to the original Rails app variant of the site'
+        required: false
+        default: 'false'
 jobs:
   test:
     timeout-minutes: 60
@@ -20,6 +24,7 @@ jobs:
     - name: Run Playwright tests
       env:
         PLAYWRIGHT_TEST_URL: ${{ github.event.inputs.url }}
+        PLAYWRIGHT_ASSUME_RAILS_APP: ${{ github.event.inputs.assume-rails-app }}
       run: npx playwright test --project=chrome
     - uses: actions/upload-artifact@v4
       if: always()
