--- a/.github/workflows/update-translated-manual-pages.yml
+++ b/.github/workflows/update-translated-manual-pages.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   check-for-updates:
+    if: github.event.repository.fork == false || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
