--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,3 +83,8 @@ jobs:
       env:
         PLAYWRIGHT_TEST_URL: http://localhost:5000/
       run: npx playwright test --project=chrome
+    - uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
