book: update sv
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/data/book/sv.yml
+++ b/external/book/data/book/sv.yml
@@ -115,20 +115,20 @@ chapters:
     title: Sammanfattning
     url: book/sv/v2/Git-på-servern-Sammanfattning
 - cs_number: '5'
-  title: Distributed Git
+  title: Distribuerade Git
   sections:
   - cs_number: '5.1'
-    title: Distributed Workflows
-    url: book/sv/v2/Distributed-Git-Distributed-Workflows
+    title: Distribuerade arbetsflöden
+    url: book/sv/v2/Distribuerade-Git-Distribuerade-arbetsflöden
   - cs_number: '5.2'
-    title: Contributing to a Project
-    url: book/sv/v2/Distributed-Git-Contributing-to-a-Project
+    title: Medverka i ett projekt
+    url: book/sv/v2/Distribuerade-Git-Medverka-i-ett-projekt
   - cs_number: '5.3'
-    title: Maintaining a Project
-    url: book/sv/v2/Distributed-Git-Maintaining-a-Project
+    title: Underhålla ett projekt
+    url: book/sv/v2/Distribuerade-Git-Underhålla-ett-projekt
   - cs_number: '5.4'
-    title: Summary
-    url: book/sv/v2/Distributed-Git-Summary
+    title: Sammanfattning
+    url: book/sv/v2/Distribuerade-Git-Sammanfattning
 - cs_number: '6'
   title: GitHub
   sections:
