--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,6 @@ jobs:
       - name: deploy to GitHub Pages
         id: deploy
         uses: ./.github/actions/deploy-to-github-pages
-      - name: Purge Cloudflare cache
-        env:
-          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
-          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-        if: env.CLOUDFLARE_TOKEN != ''
-        uses: jakejarvis/cloudflare-purge-action@v0.3.0
+        with:
+          cloudflare-token: ${{ secrets.CLOUDFLARE_TOKEN }}
+          cloudflare-zone: ${{ secrets.CLOUDFLARE_ZONE }}
