--- a/.github/workflows/update-translated-manual-pages.yml
+++ b/.github/workflows/update-translated-manual-pages.yml
@@ -89,3 +89,6 @@ jobs:
         if: steps.manual-pages.outputs.result != ''
         id: deploy
         uses: ./.github/actions/deploy-to-github-pages
+        with:
+          cloudflare-token: ${{ secrets.CLOUDFLARE_TOKEN }}
+          cloudflare-zone: ${{ secrets.CLOUDFLARE_ZONE }}
