--- a/.github/workflows/update-download-data.yml
+++ b/.github/workflows/update-download-data.yml
@@ -70,3 +70,6 @@ jobs:
         if: steps.commit.outputs.result != ''
         id: deploy
         uses: ./.github/actions/deploy-to-github-pages
+        with:
+          cloudflare-token: ${{ secrets.CLOUDFLARE_TOKEN }}
+          cloudflare-zone: ${{ secrets.CLOUDFLARE_ZONE }}
