--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -194,7 +194,10 @@ runs:
       shell: bash
       env:
         PLAYWRIGHT_TEST_URL: ${{ steps.pages.outputs.base_url }}
-      run: npx playwright test --project=chrome
+      run: |
+        # avoid test failures when HTTPS is enforced half-way through
+        PLAYWRIGHT_TEST_URL="$(echo "$PLAYWRIGHT_TEST_URL" | sed 's/^http:/https:/')" &&
+        npx playwright test --project=chrome
     - uses: actions/upload-artifact@v4
       if: always()
       with:
