deploy(playwright): _really_ be more careful when auto-upgrading from HTTP -> HTTPS
I wanted to just leave http://git-scm.com/ alone in the parent commit,
but I should have let http://git-scm.com alone (note the missing
trailing slash)...

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -197,7 +197,7 @@ runs:
       run: |
         # avoid test failures when HTTPS is enforced half-way through
         case "$PLAYWRIGHT_TEST_URL" in
-        https://*|http://git-scm.com/) ;; # okay, leave as-is
+        https://*|http://git-scm.com) ;; # okay, leave as-is
         http://*) PLAYWRIGHT_TEST_URL="https://${PLAYWRIGHT_TEST_URL#http://}";;
         esac &&
         npx playwright test --project=chrome
