ci: upgrade lychee, the link checker
There is now a v2 of `lychee-action` and we no longer need to use the
nightly version because lychee v0.16.1 includes support for the option
to fall back on appending the `.html` file extension.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -122,9 +122,8 @@ runs:
 
     - name: check for broken links
       id: lychee
-      uses: lycheeverse/lychee-action@d4128702eae98bbc5ecf74df0165a8156c80920a # until an official version is out that includes https://github.com/lycheeverse/lychee/pull/1422
+      uses: lycheeverse/lychee-action@v2
       with:
-        lycheeVersion: nightly # until an official version includes https://github.com/lycheeverse/lychee/pull/1422
         args: >-
           --offline
           --fallback-extensions html
