deploy: only try to open/close a ticket if lychee actually ran
If the link check was not run for any particular reason, we do not have
enough information to open, update or close a "broken link(s)" ticket.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -144,6 +144,7 @@ runs:
         failIfEmpty: false # needed because its default overrides `fail = false`
 
     - name: ${{ env.lychee_exit_code != '0' && 'maybe close' || 'open or update' }} link checker issue
+      if: env.lychee_exit_code != ''
       uses: actions/github-script@v7
       with:
         github-token: ${{ inputs.github-token }}
