deploy: fix inverted logic
If lychee's exit code is 0, we want to close any open "broken link(s)"
ticket, not when its exit code is non-zero.

Not that it matters much because GitHub Actions seems not to show the
labels of composite Actions in the logs, at least not at time of
writing.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/actions/deploy-to-github-pages/action.yml
+++ b/.github/actions/deploy-to-github-pages/action.yml
@@ -143,7 +143,7 @@ runs:
         fail: false
         failIfEmpty: false # needed because its default overrides `fail = false`
 
-    - name: ${{ env.lychee_exit_code != '0' && 'maybe close' || 'open or update' }} link checker issue
+    - name: ${{ env.lychee_exit_code != '0' && 'open or update' || 'maybe close' }} link checker issue
       if: env.lychee_exit_code != ''
       uses: actions/github-script@v7
       with:
