ci/deploy: only upload the playwright report if the tests actually ran
Otherwise it does not make much sense trying to upload the results.

Not that it matters much: If the file does not exist, there will be a
warning and nothing gets uploaded anyway.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,11 +79,14 @@ jobs:
     - name: Install @playwright/test
       run: npm install @playwright/test
     - name: Run Playwright tests
+      id: playwright
       env:
         PLAYWRIGHT_TEST_URL: http://localhost:5000/
-      run: npx playwright test --project=chrome
+      run: |
+        echo "result=$PLAYWRIGHT_TEST_URL" >>$GITHUB_OUTPUT &&
+        npx playwright test --project=chrome
     - uses: actions/upload-artifact@v4
-      if: always()
+      if: always() && steps.playwright.outputs.result != ''
       with:
         name: playwright-report
         path: playwright-report/
