Prevent concurrent deployments
GitHub Pages' sites are singletons and therefore we should use the
recommended pattern to prevent multiple deployments to run at the same
time; Instead, we want to queue them all up.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   deploy:
+    concurrency:
+      group: "pages"
+      cancel-in-progress: false
     runs-on: ubuntu-latest
     permissions:
       pages: write # to deploy to GitHub Pages
