--- a/.github/workflows/update-book.yml
+++ b/.github/workflows/update-book.yml
@@ -104,6 +104,9 @@ jobs:
           name: bundle-${{ matrix.language.lang }}
           path: ${{ matrix.language.lang }}.bundle
   push-updates:
+    concurrency:
+      group: "pages"
+      cancel-in-progress: false
     needs: [check-for-updates, update-book]
     if: needs.check-for-updates.outputs.matrix != '[""]'
     permissions:
