--- a/.github/workflows/update-download-data.yml
+++ b/.github/workflows/update-download-data.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   update-download-data:
+    concurrency:
+      group: "pages"
+      cancel-in-progress: false
     if: github.event.repository.fork == false || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     permissions:
