--- a/.github/workflows/update-git-version-and-manual-pages.yml
+++ b/.github/workflows/update-git-version-and-manual-pages.yml
@@ -13,6 +13,9 @@ on:
 
 jobs:
   update-git-version-and-manual-pages:
+    concurrency:
+      group: "pages"
+      cancel-in-progress: false
     if: github.event.repository.fork == false || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     permissions:
