--- a/.github/workflows/update-translated-manual-pages.yml
+++ b/.github/workflows/update-translated-manual-pages.yml
@@ -13,6 +13,9 @@ on:
 
 jobs:
   check-for-updates:
+    concurrency:
+      group: "pages"
+      cancel-in-progress: false
     if: github.event.repository.fork == false || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
