book: update de
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/data/book/de.yml
+++ b/external/book/data/book/de.yml
@@ -286,23 +286,23 @@ chapters:
     title: Zusammenfassung
     url: book/de/v2/Anhang-A:-Git-in-anderen-Umgebungen-Zusammenfassung
 - cs_number: A2
-  title: 'Anhang B: Git in Ihre Anwendungen einbetten'
+  title: 'Anhang B: Git in deine Anwendungen einbetten'
   sections:
   - cs_number: A2.1
     title: Die Git-Kommandozeile
-    url: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Die-Git-Kommandozeile
+    url: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Die-Git-Kommandozeile
   - cs_number: A2.2
     title: Libgit2
-    url: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Libgit2
+    url: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Libgit2
   - cs_number: A2.3
     title: JGit
-    url: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-JGit
+    url: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-JGit
   - cs_number: A2.4
     title: go-git
-    url: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-go-git
+    url: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-go-git
   - cs_number: A2.5
     title: Dulwich
-    url: book/de/v2/Anhang-B:-Git-in-Ihre-Anwendungen-einbetten-Dulwich
+    url: book/de/v2/Anhang-B:-Git-in-deine-Anwendungen-einbetten-Dulwich
 - cs_number: A3
   title: 'Anhang C: Git Kommandos'
   sections:
