book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/data/book/uk.yml
+++ b/external/book/data/book/uk.yml
@@ -145,8 +145,8 @@ chapters:
     title: Як зробити внесок до проекту
     url: book/uk/v2/GitHub-Як-зробити-внесок-до-проекту
   - cs_number: '6.3'
-    title: Супроводжування проекту
-    url: book/uk/v2/GitHub-Супроводжування-проекту
+    title: Супроводжування проєкту
+    url: book/uk/v2/GitHub-Супроводжування-проєкту
   - cs_number: '6.4'
     title: Керування організацією
     url: book/uk/v2/GitHub-Керування-організацією
