book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/data/book/uk.yml
+++ b/external/book/data/book/uk.yml
@@ -40,8 +40,8 @@ chapters:
   title: Основи Git
   sections:
   - cs_number: '2.1'
-    title: Створення Git-репозиторія
-    url: book/uk/v2/Основи-Git-Створення-Git-репозиторія
+    title: Створення Git-сховища
+    url: book/uk/v2/Основи-Git-Створення-Git-сховища
   - cs_number: '2.2'
     title: Запис змін до репозиторія
     url: book/uk/v2/Основи-Git-Запис-змін-до-репозиторія
