Update download data (Git for Windows v2.47.1)
Updated via the `update-download-data.yml` GitHub workflow.

--- a/hugo.yml
+++ b/hugo.yml
@@ -43,22 +43,22 @@ params:
     filename: git-2.33.0-intel-universal-mavericks.dmg
   windows_installer:
     portable32:
-      filename: PortableGit-2.47.0.2-32-bit.7z.exe
-      release_date: '2024-10-22'
-      version: 2.47.0(2)
-      url: https://github.com/git-for-windows/git/releases/download/v2.47.0.windows.2/PortableGit-2.47.0.2-32-bit.7z.exe
+      filename: PortableGit-2.47.1-32-bit.7z.exe
+      release_date: '2024-11-25'
+      version: 2.47.1
+      url: https://github.com/git-for-windows/git/releases/download/v2.47.1.windows.1/PortableGit-2.47.1-32-bit.7z.exe
     portable64:
-      filename: PortableGit-2.47.0.2-64-bit.7z.exe
-      release_date: '2024-10-22'
-      version: 2.47.0(2)
-      url: https://github.com/git-for-windows/git/releases/download/v2.47.0.windows.2/PortableGit-2.47.0.2-64-bit.7z.exe
+      filename: PortableGit-2.47.1-64-bit.7z.exe
+      release_date: '2024-11-25'
+      version: 2.47.1
+      url: https://github.com/git-for-windows/git/releases/download/v2.47.1.windows.1/PortableGit-2.47.1-64-bit.7z.exe
     installer32:
-      filename: Git-2.47.0.2-32-bit.exe
-      release_date: '2024-10-22'
-      version: 2.47.0(2)
-      url: https://github.com/git-for-windows/git/releases/download/v2.47.0.windows.2/Git-2.47.0.2-32-bit.exe
+      filename: Git-2.47.1-32-bit.exe
+      release_date: '2024-11-25'
+      version: 2.47.1
+      url: https://github.com/git-for-windows/git/releases/download/v2.47.1.windows.1/Git-2.47.1-32-bit.exe
     installer64:
-      filename: Git-2.47.0.2-64-bit.exe
-      release_date: '2024-10-22'
-      version: 2.47.0(2)
-      url: https://github.com/git-for-windows/git/releases/download/v2.47.0.windows.2/Git-2.47.0.2-64-bit.exe
+      filename: Git-2.47.1-64-bit.exe
+      release_date: '2024-11-25'
+      version: 2.47.1
+      url: https://github.com/git-for-windows/git/releases/download/v2.47.1.windows.1/Git-2.47.1-64-bit.exe
